syntax = "proto3";

package mexc;

message PushDataV3ApiWrapper {
  int32 channel = 1;
  string symbol = 2;
  string symbolId = 3;
  int64 createTime = 4;
  bool sendTime = 5;
  bytes data = 6;
}

message PublicLimitDepthsV3Api {
  repeated Depth asks = 2;
  repeated Depth bids = 3;
  string eventTime = 4;
  int64 lastUpdateId = 5;
}

message Depth {
  string p = 1;  // price
  string v = 2;  // volume
}

message PublicAggreDepthsV3Api {
  repeated Depth asks = 2;
  repeated Depth bids = 3;
  string eventTime = 4;
}
